# TetrisC-

tetris_56065_56117-main/Tetris_56065_56117-gui/: CMakeLists.txt  Controler.cpp  boardwidget.cpp  brickFactory.cpp  brickFactory.h  doxyfile  game.h  gamewidget.cpp  main.cpp  view.cpp
tetris_56065_56117-main/Tetris_56065_56117-gui/docs/html/: menudata.js
tetris_56065_56117-main/Tetris_56065_56117-gui/docs/html/search/: all_10.js  all_12.js  all_13.js  all_14.js  all_17.js  all_2.js  all_9.js  all_a.js  all_d.js  all_e.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_8.js  classes_9.js  classes_a.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_8.js  (+5 more)
tetris_56065_56117-main/Tetris_56065_56117-gui/docs/latex/: _board_8h_source.tex  _colors_8h_source.tex  annotated.tex  brick_8cpp.tex  class_board_widget.eps  class_main_window.tex  classcontroler_1_1_controler.tex  classmodel_1_1_game.tex  classmodel_1_1_ibrick.eps  classmodel_1_1_jbrick.tex  classmodel_1_1_lbrick.eps  classmodel_1_1_obrick.eps  classmodel_1_1_sbrick.eps  classmodel_1_1_tbrick.tex  classmodel_1_1_zbrick.tex  classmodel_1_1brick.eps  classmodel_1_1position.tex  classview_1_1_view.tex  game_8h_source.tex  gamewidget_8h_source.tex  moc__dimensiondialog_8cpp_source.tex  moc__mainwindow_8cpp_source.tex  moc__predefs_8h_source.tex  position_8cpp.tex  position_8h_source.tex  struct_q_t___w_a_r_n_i_n_g___d_i_s_a_b_l_e___d_e_p_r_e_c_a_t_e_d_1_1qt__meta__stringdata___c_l_ab7ad9d187cc9810c6a02c5caa2894b1b.tex  view_8cpp.tex
(+70 files in other folders)
